# notely

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  config.example.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/images/: architecture.mmd  pipeline.mmd  usage-flow.mmd
docs/plans/: 2026-03-09-document-support-design.md  2026-03-09-glm-ocr-integration-design.md  2026-03-09-glm-ocr-integration-implementation.md
examples/: basic_usage.py  yaml_config.py
src/notely/: __init__.py  cli.py  config.py  core.py  models.py
src/notely/asr/: __init__.py  base.py  funasr.py  whisper.py
src/notely/enhancer/: __init__.py  comprehension.py  enhancer.py  models.py  structuring.py  utils.py
src/notely/formatter/: __init__.py  beautifier.py
src/notely/input/: __init__.py  pdf.py  processors.py  types.py
src/notely/llm/: __init__.py  base.py  client.py  openai.py  zhipu.py
src/notely/ocr/: __init__.py  base.py  glm.py  paddle.py
src/notely/prompts/: __init__.py  comprehension.py  loader.py  registry.py  structuring.py  templates.py
src/notely/prompts/templates/: academic.md  default.md  meeting.md  technical.md
src/notely/utils/: __init__.py  audio.py  common.py  language.py  video.py
tests/: test_enhancer.py
tests/integration/: test_language_integration.py
tests/unit/: test_config.py  test_core_image.py  test_core_pdf.py  test_language_detect.py  test_llm_zhipu.py  test_models.py  test_ocr_glm.py  test_prompts.py
